--- a/pages/day20.html
+++ b/pages/day20.html
@@ -1,18 +1,333 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 20</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 20</h1>
+      <h1>Día 20</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 20 se añadirá más adelante.</p>
+      <!-- 1. Flexión y extensión del cuello -->
+      <section>
+        <h2>1. Flexión y extensión del cuello (10 repeticiones)</h2>
+        <img
+          src="../img/day20/1.1.jpg"
+          alt="Cuello: flexión hacia adelante (barbilla al pecho)"
+        />
+        <img
+          src="../img/day20/1.2.jpg"
+          alt="Cuello: extensión hacia atrás mirando hacia arriba"
+        />
+        <p>
+          De pie, manos en la cintura. Inclina la cabeza hacia adelante llevando
+          la barbilla al pecho. Vuelve al centro y luego mira hacia arriba,
+          extendiendo el cuello sin tirones. El torso se mantiene estable.
+        </p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Стоя, руки на поясе. Наклони голову вперёд, прижимая подбородок к
+            груди. Вернись в центр и затем мягко отведи голову назад, глядя
+            вверх, без рывков. Корпус неподвижен.
+          </p>
+        </details>
+      </section>
+
+      <!-- 2. Giros del cuello izquierda/derecha -->
+      <section>
+        <h2>2. Giros del cuello (10 repeticiones)</h2>
+        <img src="../img/day20/2.1.jpg" alt="Cuello: giro hacia un lado" />
+        <img src="../img/day20/2.2.jpg" alt="Cuello: giro hacia el otro lado" />
+        <p>
+          Desde la posición neutra, gira la cabeza a la izquierda como si
+          quisieras mirar por encima del hombro. Vuelve al centro y gira a la
+          derecha. Mantén los hombros bajos, sin inclinar la cabeza.
+        </p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (5 por cada lado).</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Из нейтрального положения поверни голову влево, будто хочешь
+            посмотреть через плечо. Вернись в центр и поверни вправо. Плечи
+            держи опущенными, голову не наклоняй.
+          </p>
+          <p>
+            <strong>Выполнение:</strong> 10 повторений (по 5 в каждую сторону).
+          </p>
+        </details>
+      </section>
+
+      <!-- 3. Inclinación lateral del cuello -->
+      <section>
+        <h2>3. Inclinación lateral del cuello (10 repeticiones)</h2>
+        <img
+          src="../img/day20/3.1.jpg"
+          alt="Cuello: inclinación lateral hacia un lado"
+        />
+        <img
+          src="../img/day20/3.2.jpg"
+          alt="Cuello: inclinación lateral hacia el otro lado"
+        />
+        <p>
+          Inclina la cabeza llevando la oreja hacia el hombro sin elevar el
+          hombro. Vuelve al centro y repite al otro lado. No gires la cabeza:
+          solo inclinación lateral.
+        </p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (5 por cada lado).</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Наклони голову, приближая ухо к плечу (плечо не поднимай). Вернись в
+            центр и повтори в другую сторону. Голову не поворачивай — только
+            боковой наклон.
+          </p>
+          <p>
+            <strong>Выполнение:</strong> 10 повторений (по 5 в каждую сторону).
+          </p>
+        </details>
+      </section>
+
+      <!-- 4. Rotación circular del cuello -->
+      <section>
+        <h2>4. Rotación circular del cuello (10 rotaciones)</h2>
+        <p>
+          Haz círculos lentos y controlados con la cabeza. No “lances” la cabeza
+          hacia atrás: controla todo el recorrido y reduce la amplitud si hay
+          molestia.
+        </p>
+        <p><strong>Ejecución:</strong> 10 rotaciones (5 en cada dirección).</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Делай медленные круговые вращения головой. Не «забрасывай» голову
+            назад — контролируй всю траекторию и уменьши амплитуду, если
+            появляется дискомфорт.
+          </p>
+          <p><strong>Выполнение:</strong> 10 вращений (5 в каждую сторону).</p>
+        </details>
+      </section>
+
+      <!-- 5. Elevación de hombros (trapecios) -->
+      <section>
+        <h2>5. Encogimientos de hombros (10 repeticiones)</h2>
+        <p>
+          Eleva ambos hombros hacia las orejas creando una contracción fuerte en
+          los trapecios. Luego baja los hombros de forma consciente, dejándolos
+          lejos de las orejas.
+        </p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Подними оба плеча к ушам, создавая сильное напряжение в трапециях.
+            Затем осознанно опусти плечи вниз, убирая их подальше от ушей.
+          </p>
+        </details>
+      </section>
+
+      <!-- 6. Rotación de brazos con amplitud creciente -->
+      <section>
+        <h2>6. Rotación de brazos con amplitud creciente (2 direcciones)</h2>
+        <img
+          src="../img/day20/6.1.jpg"
+          alt="Círculos con los brazos a los lados"
+        />
+        <p>
+          Brazos extendidos a los lados. Haz círculos muy pequeños y ve
+          aumentando la amplitud poco a poco hasta círculos grandes, sin perder
+          el control. Mantén el torso firme y los hombros lejos de las orejas.
+          Luego repite en la dirección contraria.
+        </p>
+        <p><strong>Ejecución:</strong> 10 círculos por dirección.</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Руки в стороны. Начни вращения с маленькой амплитуды и постепенно
+            увеличивай до больших кругов, сохраняя контроль. Корпус стабильный,
+            плечи не поднимать к ушам. Затем повтори в обратную сторону.
+          </p>
+          <p><strong>Выполнение:</strong> по 10 кругов в каждую сторону.</p>
+        </details>
+      </section>
+
+      <!-- 7. Estiramiento hacia arriba -->
+      <section>
+        <h2>7. Estiramiento hacia arriba (1×10)</h2>
+        <img
+          src="../img/day20/7.1.jpg"
+          alt="Estiramiento hacia arriba con brazos elevados"
+        />
+        <p>
+          De pie, pies al ancho de hombros. Lleva los brazos arriba y estírate
+          hacia el techo alargando todo el cuerpo. Puedes elevarte ligeramente a
+          las puntas. No arquees la zona lumbar: abdomen firme y control.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Стоя, ноги на ширине плеч. Подними руки вверх и тянись к потолку,
+            вытягивая всё тело. Можно слегка подниматься на носки. Поясницу не
+            ломай: живот в тонусе, контроль.
+          </p>
+          <p><strong>Выполнение:</strong> 1 подход × 10 повторений.</p>
+        </details>
+      </section>
+
+      <!-- 8. Inclinaciones laterales del torso -->
+      <section>
+        <h2>8. Inclinaciones laterales del torso (5 por lado)</h2>
+        <img
+          src="../img/day20/8.1.jpg"
+          alt="Inclinación lateral del torso con manos en la cintura"
+        />
+        <p>
+          De pie, manos en la cintura. Inclina el torso hacia un lado sin girar
+          hacia adelante ni hacia atrás. La pelvis se mantiene estable. Vuelve
+          al centro y repite al otro lado.
+        </p>
+        <p><strong>Ejecución:</strong> 5 repeticiones por lado.</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Стоя, руки на поясе. Наклони корпус в сторону без разворота вперёд
+            или назад. Таз стабильный. Вернись в центр и повтори на другую
+            сторону.
+          </p>
+          <p><strong>Выполнение:</strong> по 5 повторений на сторону.</p>
+        </details>
+      </section>
+
+      <!-- 9. Tocar el suelo con las manos -->
+      <section>
+        <h2>9. Tocar el suelo con las manos (2×10)</h2>
+        <img
+          src="../img/day20/9.1.jpg"
+          alt="Flexión al suelo intentando tocar el piso con las manos"
+        />
+        <p>
+          De pie, pies al ancho de hombros. Mantén las piernas lo más rectas
+          posible (sin dolor) y lleva la cadera bien hacia atrás. Inclina el
+          torso hacia abajo y estira las manos hacia el suelo hasta tocarlo o
+          acercarte al máximo. Sin rebotes: baja y sube controlado.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Стоя, ноги на ширине плеч. Держи ноги максимально прямыми (без боли)
+            и уводи таз назад. Наклоняйся вниз и тянись руками к полу — коснись
+            пола или подойди максимально близко. Без пружинок: вниз-вверх
+            подконтрольно.
+          </p>
+          <p><strong>Выполнение:</strong> 2 подхода по 10 повторений.</p>
+        </details>
+      </section>
+
+      <!-- 10. Cobra -->
+      <section>
+        <h2>10. Cobra (10 repeticiones)</h2>
+        <img
+          src="../img/day20/10.1.jpg"
+          alt="Postura de cobra elevando el pecho desde el suelo"
+        />
+        <p>
+          Túmbate boca abajo. Coloca las palmas debajo de los hombros. Empuja el
+          suelo y eleva el pecho como en la postura de cobra, manteniendo la
+          pelvis y los muslos en el suelo. Hombros lejos de las orejas, cuello
+          largo. Baja con control.
+        </p>
+        <p><strong>Ejecución:</strong> 10 repeticiones.</p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Ляг на живот. Ладони под плечами. Упрись в пол и подними грудь как в
+            “кобре”, таз и бёдра остаются на полу. Плечи опусти от ушей, шея
+            длинная. Опускайся подконтрольно.
+          </p>
+          <p><strong>Выполнение:</strong> 10 повторений.</p>
+        </details>
+      </section>
+
+      <!-- 11. Estiramiento hacia la pierna elevada -->
+      <section>
+        <h2>11. Estiramiento hacia la pierna elevada</h2>
+        <img
+          src="../img/day20/11.1.jpg"
+          alt="Estiramiento hacia una pierna elevada con ayuda de toalla"
+        />
+        <p>
+          Coloca una pierna recta sobre un apoyo estable. Mantén la espalda lo
+          más recta posible. Si tienes una toalla/cinta, pásala por el pie y
+          tira suavemente hacia ti para acercar el torso a la pierna, sin dolor
+          y sin redondear demasiado la espalda. Cambia de pierna.
+        </p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            Поставь прямую ногу на устойчивую опору. Спину держи максимально
+            ровно. Если есть полотенце/ремень — накинь на стопу и мягко
+            подтягивай к себе, приближая корпус к ноге без боли и без сильного
+            округления спины. Затем поменяй ногу.
+          </p>
+        </details>
+      </section>
+
+      <!-- 12. Isometría de isquiotibiales (2 подхода) -->
+      <section>
+        <h2>
+          12. Isometría de isquiotibiales (10 s × 10 por pierna, 2 series)
+        </h2>
+        <img
+          src="../img/day20/12.1.jpg"
+          alt="Isometría de isquiotibiales de pie"
+        />
+        <img
+          src="../img/day20/12.2.jpg"
+          alt="Isometría de isquiotibiales acostado"
+        />
+        <p>
+          <strong>Serie 1 (de pie):</strong> Levanta una rodilla y fija la
+          postura. Crea tensión en la parte posterior del muslo (isquiotibiales)
+          sin movimiento visible. Mantén 10 segundos. Alterna piernas.
+        </p>
+        <p>
+          <strong>Serie 2 (acostado):</strong> Túmbate boca arriba. Una pierna
+          estirada en el suelo y la otra flexionada para estabilizar. Con la
+          pierna estirada “clava” el talón en el suelo e intenta arrastrarlo
+          hacia ti (como si quisieras doblar la rodilla), pero sin que se
+          deslice: así se crea la isometría en isquiotibiales. Mantén 10
+          segundos. Alterna piernas.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 10 segundos × 10 repeticiones por pierna,
+          en cada serie.
+        </p>
+        <details>
+          <summary>Русский перевод</summary>
+          <p>
+            <strong>Подход 1 (стоя):</strong> Подними колено и зафиксируй
+            корпус. Создай напряжение в задней поверхности бедра (бицепс бедра)
+            без видимого движения. Держи 10 секунд. Чередуй ноги.
+          </p>
+          <p>
+            <strong>Подход 2 (лёжа):</strong> Ляг на спину. Одна нога прямая на
+            полу, другая согнута для стабилизации. Прямой ногой “вдави” пятку в
+            пол и попробуй потянуть пятку на себя (как будто хочешь согнуть
+            колено), но без скольжения — так создаётся изометрия бицепса бедра.
+            Держи 10 секунд. Чередуй ноги.
+          </p>
+          <p>
+            <strong>Выполнение:</strong> 10 секунд × 10 повторений на каждую
+            ногу, в каждом подходе.
+          </p>
+        </details>
+      </section>
     </main>
-</body>
+  </body>
 </html>
