--- a/pages/day22.html
+++ b/pages/day22.html
@@ -1,18 +1,253 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 22</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 22</h1>
+      <h1>Día 22</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 22 se añadirá más adelante.</p>
+      <!-- 1. Flexiones -->
+      <section>
+        <h2>1. Flexiones — 4×10</h2>
+        <img src="../img/day22/1.1.jpg" alt="Flexiones clásicas en el suelo" />
+        <p>
+          Colócate en posición de plancha: manos a la anchura de los hombros,
+          cuerpo en línea recta y abdomen firme. Desciende de forma controlada
+          llevando los codos hacia atrás (sin abrirlos demasiado). Baja el pecho
+          hacia el suelo y sube empujando fuerte, terminando arriba
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 4 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 2. Fondos en banco -->
+      <section>
+        <h2>2. Fondos en banco — 4×10</h2>
+        <img src="../img/day22/2.1.jpg" alt="Fondos en banco (tríceps)" />
+        <p>
+          Apoya las manos en el borde de un banco/silla detrás de ti, con el
+          pecho abierto y los hombros abajo. Desciende flexionando los codos
+          hacia atrás hasta una profundidad cómoda, y luego sube empujando de
+          forma controlada
+          <strong>sin bloquear completamente los codos</strong>. Mantén el
+          cuerpo estable y el movimiento limpio.
+        </p>
+        <p><strong>Ejecución:</strong> 4 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 3. Flexiones -->
+      <section>
+        <h2>3. Flexiones — 3×10</h2>
+        <img src="../img/day22/3.1.jpg" alt="Flexiones clásicas en el suelo" />
+        <p>
+          Misma técnica que en el ejercicio 1: cuerpo en línea recta, codos
+          hacia atrás, baja con control y sube fuerte. Termina arriba
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 3 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 4. Fondos en banco -->
+      <section>
+        <h2>4. Fondos en banco — 3×10</h2>
+        <img src="../img/day22/4.1.jpg" alt="Fondos en banco (tríceps)" />
+        <p>
+          Misma técnica que en el ejercicio 2: hombros abajo, codos hacia atrás,
+          rango cómodo y subida controlada
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 3 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 5. Flexiones -->
+      <section>
+        <h2>5. Flexiones — 2×10</h2>
+        <img src="../img/day22/5.1.jpg" alt="Flexiones clásicas en el suelo" />
+        <p>
+          Repite las flexiones con la misma técnica: plancha firme, descenso
+          controlado y subida potente. Termina arriba
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 6. Fondos en banco -->
+      <section>
+        <h2>6. Fondos en banco — 2×10</h2>
+        <img src="../img/day22/6.1.jpg" alt="Fondos en banco (tríceps)" />
+        <p>
+          Repite los fondos con control, sin balanceo del cuerpo. Mantén los
+          hombros abajo y sube
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 7. Flexiones -->
+      <section>
+        <h2>7. Flexiones — 1×10</h2>
+        <img src="../img/day22/7.1.jpg" alt="Flexiones clásicas en el suelo" />
+        <p>
+          Una serie más de flexiones manteniendo la técnica: cuerpo firme, codos
+          hacia atrás, sube
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
+
+      <!-- 8. Fondos en banco -->
+      <section>
+        <h2>8. Fondos en banco — 1×10</h2>
+        <img src="../img/day22/8.1.jpg" alt="Fondos en banco (tríceps)" />
+        <p>
+          Una serie más de fondos, controlando el rango. Sube
+          <strong>sin bloquear completamente los codos</strong> y mantén la
+          postura estable.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
+
+      <!-- 9. Supinación isométrica de bíceps -->
+      <section>
+        <h2>9. Supinación isométrica de bíceps — 3×10 por brazo (10 s)</h2>
+        <img
+          src="../img/day22/9.1.jpg"
+          alt="Supinación isométrica de bíceps (pose)"
+        />
+        <p>
+          De pie y firme. Flexiona el brazo como en una pose de bíceps y gira la
+          muñeca hacia afuera (supinación) para buscar la máxima contracción.
+          Mantén el hombro abajo y el codo controlado (sin encoger el cuello).
+        </p>
+        <p>
+          En cada repetición, aprieta el bíceps con fuerza durante
+          <strong>10 segundos</strong>, sin balancear el cuerpo. Puedes variar
+          un poco el ángulo del brazo para encontrar la mejor contracción.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 3 series de 10 repeticiones por cada brazo
+          (10 s por repetición).
+        </p>
+      </section>
+
+      <!-- 10. Bíceps con toalla/cinturón -->
+      <section>
+        <h2>10. Bíceps con toalla/cinturón — 2×10 (10 s)</h2>
+        <img
+          src="../img/day22/10.1.jpg"
+          alt="Bíceps isométrico con toalla o cinturón bajo el pie"
+        />
+        <p>
+          Siéntate en un banco/silla. Pasa una toalla que no estire (o
+          cinturón/correa) por debajo del pie y sujeta los dos extremos con las
+          manos. Mantén los codos pegados al cuerpo y los hombros abajo.
+        </p>
+        <p>
+          Intenta hacer un curl tirando hacia arriba con ambas manos mientras el
+          pie y la toalla impiden el movimiento. Busca una contracción máxima en
+          los dos bíceps. En cada repetición aprieta
+          <strong>10 segundos</strong>, suelta y vuelve a tensar.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 2 series de 10 repeticiones (10 s por
+          repetición).
+        </p>
+      </section>
+
+      <!-- 11. Supinación isométrica de bíceps -->
+      <section>
+        <h2>11. Supinación isométrica de bíceps — 2×10 por brazo (10 s)</h2>
+        <img
+          src="../img/day22/11.1.jpg"
+          alt="Supinación isométrica de bíceps (pose)"
+        />
+        <p>
+          Repite el ejercicio 9 con la misma técnica: supinación para máxima
+          contracción, hombro abajo, sin balanceo. Aprieta
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 2 series de 10 repeticiones por cada brazo
+          (10 s por repetición).
+        </p>
+      </section>
+
+      <!-- 12. Bíceps con toalla/cinturón -->
+      <section>
+        <h2>12. Bíceps con toalla/cinturón — 2×10 (10 s)</h2>
+        <img
+          src="../img/day22/12.1.jpg"
+          alt="Bíceps isométrico con toalla o cinturón bajo el pie"
+        />
+        <p>
+          Repite el ejercicio 10 con la misma técnica: codos pegados al cuerpo,
+          hombros abajo, contracción máxima. En cada repetición aprieta
+          <strong>10 segundos</strong>.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 2 series de 10 repeticiones (10 s por
+          repetición).
+        </p>
+      </section>
+
+      <!-- 13. Supinación isométrica de bíceps -->
+      <section>
+        <h2>13. Supinación isométrica de bíceps — 1×10 por brazo (10 s)</h2>
+        <img
+          src="../img/day22/13.1.jpg"
+          alt="Supinación isométrica de bíceps (pose)"
+        />
+        <p>
+          Una última serie del ejercicio de supinación: busca máxima contracción
+          y mantén <strong>10 segundos</strong> en cada repetición.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 1 serie de 10 repeticiones por cada brazo
+          (10 s por repetición).
+        </p>
+      </section>
+
+      <!-- 14. Bíceps con toalla/cinturón -->
+      <section>
+        <h2>14. Bíceps con toalla/cinturón — 1×10 (10 s)</h2>
+        <img
+          src="../img/day22/14.1.jpg"
+          alt="Bíceps isométrico con toalla o cinturón bajo el pie"
+        />
+        <p>
+          Una última serie del bíceps con toalla/cinturón. Mantén la postura
+          estable y aprieta <strong>10 segundos</strong> en cada repetición.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 1 serie de 10 repeticiones (10 s por
+          repetición).
+        </p>
+      </section>
+
+      <!-- 15. Flexiones (al máximo) -->
+      <section>
+        <h2>15. Flexiones — 1 serie al máximo</h2>
+        <img
+          src="../img/day22/15.1.jpg"
+          alt="Flexiones clásicas en el suelo (serie final)"
+        />
+        <p>
+          Colócate en posición de plancha y realiza flexiones con técnica
+          limpia: codos hacia atrás, cuerpo firme, sube
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 1 serie al máximo (todas las repeticiones
+          que puedas manteniendo la técnica).
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
