--- a/pages/day23.html
+++ b/pages/day23.html
@@ -1,18 +1,230 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 23</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 23</h1>
+      <h1>Día 23</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 23 se añadirá más adelante.</p>
+      <!-- 1. Elevación parcial del abdomen -->
+      <section>
+        <h2>1. Elevación parcial del abdomen — 20 repeticiones</h2>
+        <img src="../img/day23/1.1.jpg" alt="Elevación parcial del abdomen" />
+        <p>
+          Acuéstate boca arriba con las rodillas flexionadas y los pies
+          apoyados. Lleva las manos hacia las rodillas y eleva el torso sin
+          incorporarte por completo, solo lo necesario para acercarte/tocar las
+          rodillas con las manos. El movimiento es corto, controlado y sin
+          impulsos.
+        </p>
+        <p>
+          Exhala al subir apretando el abdomen y baja despacio manteniendo el
+          core activo (sin relajar del todo la tensión).
+        </p>
+        <p><strong>Ejecución:</strong> 20 repeticiones.</p>
+      </section>
+
+      <!-- 2. Uddiyana Bandha (versión rápida) -->
+      <section>
+        <h2>2. Uddiyana Bandha (versión rápida) — 10 repeticiones</h2>
+        <img
+          src="../img/day23/2.1.jpg"
+          alt="Uddiyana Bandha: bombeo rápido en apnea"
+        />
+        <p>
+          De pie, inclina el torso un poco hacia adelante y apoya las manos por
+          encima de las rodillas. Exhala todo el aire y quédate en apnea con
+          pulmones vacíos.
+        </p>
+        <p>
+          Sin tomar aire, mete el abdomen hacia dentro y hacia arriba (vacío) y
+          luego suéltalo hacia afuera, alternando “meter/soltar” varias veces
+          dentro de la misma retención. Luego inhala suave y descansa.
+        </p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (cada apnea = 1).</p>
+      </section>
+
+      <!-- 3. Elevación parcial del abdomen -->
+      <section>
+        <h2>3. Elevación parcial del abdomen — 2×15 (o 1×30)</h2>
+        <img src="../img/day23/3.1.jpg" alt="Elevación parcial del abdomen" />
+        <p>
+          Misma técnica del ejercicio 1. Movimiento corto, controlado y sin
+          impulsos. Exhala al subir y baja despacio manteniendo el core activo.
+        </p>
+        <p><strong>Ejecución:</strong> 2×15 o 1×30.</p>
+      </section>
+
+      <!-- 4. Uddiyana Bandha (repetición) -->
+      <section>
+        <h2>4. Uddiyana Bandha (versión rápida) — 10 repeticiones</h2>
+        <img
+          src="../img/day23/4.1.jpg"
+          alt="Uddiyana Bandha: bombeo rápido en apnea"
+        />
+        <p>Repite el ejercicio 2 con la misma técnica.</p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (cada apnea = 1).</p>
+      </section>
+
+      <!-- 5. Elevación parcial del abdomen -->
+      <section>
+        <h2>5. Elevación parcial del abdomen — 3×10 (o 1×30)</h2>
+        <img src="../img/day23/5.1.jpg" alt="Elevación parcial del abdomen" />
+        <p>
+          Misma técnica del ejercicio 1. Movimiento corto y controlado. Exhala
+          al subir y baja despacio manteniendo el core activo.
+        </p>
+        <p><strong>Ejecución:</strong> 3×10 o 1×30.</p>
+      </section>
+
+      <!-- 6. Uddiyana Bandha (repetición) -->
+      <section>
+        <h2>6. Uddiyana Bandha (versión rápida) — 10 repeticiones</h2>
+        <img
+          src="../img/day23/6.1.jpg"
+          alt="Uddiyana Bandha: bombeo rápido en apnea"
+        />
+        <p>Repite el ejercicio 2 con la misma técnica.</p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (cada apnea = 1).</p>
+      </section>
+
+      <!-- 7. Elevación parcial del abdomen -->
+      <section>
+        <h2>7. Elevación parcial del abdomen — 40 (2×20 o 1×40)</h2>
+        <img src="../img/day23/7.1.jpg" alt="Elevación parcial del abdomen" />
+        <p>
+          Misma técnica del ejercicio 1. Movimiento corto y controlado. Exhala
+          al subir y baja despacio manteniendo el core activo.
+        </p>
+        <p><strong>Ejecución:</strong> 40 repeticiones (2×20 o 1×40).</p>
+      </section>
+
+      <!-- 8. Uddiyana Bandha (repetición) -->
+      <section>
+        <h2>8. Uddiyana Bandha (versión rápida) — 10 repeticiones</h2>
+        <img
+          src="../img/day23/8.1.jpg"
+          alt="Uddiyana Bandha: bombeo rápido en apnea"
+        />
+        <p>Repite el ejercicio 2 con la misma técnica.</p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (cada apnea = 1).</p>
+      </section>
+
+      <!-- 9. Elevación parcial del abdomen (hasta el agotamiento) -->
+      <section>
+        <h2>9. Elevación parcial del abdomen — hasta el agotamiento</h2>
+        <img
+          src="../img/day23/9.1.jpg"
+          alt="Elevación parcial del abdomen con brazos cruzados"
+        />
+        <p>
+          Acuéstate boca arriba con las rodillas flexionadas y los pies
+          apoyados. Haz la variante con los brazos cruzados sobre el pecho (o
+          manos hacia las rodillas si prefieres). Eleva el torso sin
+          incorporarte por completo, con recorrido corto y controlado.
+        </p>
+        <p>
+          Exhala al subir y baja despacio sin relajarte del todo entre
+          repeticiones.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie hasta el agotamiento.</p>
+      </section>
+
+      <!-- 10. Uddiyana Bandha (repetición) -->
+      <section>
+        <h2>10. Uddiyana Bandha (versión rápida) — 10 repeticiones</h2>
+        <img
+          src="../img/day23/10.1.jpg"
+          alt="Uddiyana Bandha: bombeo rápido en apnea"
+        />
+        <p>Repite el ejercicio 2 con la misma técnica.</p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (cada apnea = 1).</p>
+      </section>
+
+      <!-- 11. Hiperextensión isométrica -->
+      <section>
+        <h2>11. Hiperextensión isométrica — 10 repeticiones (10 s)</h2>
+        <img
+          src="../img/day23/11.1.jpg"
+          alt="Hiperextensión elevando torso y piernas"
+        />
+        <p>
+          Acuéstate boca abajo. Manos detrás de la cabeza sin tirar del cuello.
+          Piernas estiradas y activas. Eleva simultáneamente el pecho y las
+          piernas creando una contracción fuerte de la zona lumbar, glúteos y
+          cadena posterior.
+        </p>
+        <p>
+          Mantén arriba <strong>10 segundos</strong>, baja con control y repite.
+        </p>
+        <p><strong>Ejecución:</strong> 10 repeticiones (10 s cada una).</p>
+      </section>
+
+      <!-- 12. Peso muerto isométrico “bloqueado” -->
+      <section>
+        <h2>12. Peso muerto isométrico “bloqueado” — 15 por pierna (10 s)</h2>
+        <img
+          src="../img/day23/12.1.jpg"
+          alt="Peso muerto isométrico bloqueado apoyando manos en muslos"
+        />
+        <p>
+          Ponte de pie e inclina el torso hacia adelante como en un peso muerto,
+          con la espalda firme y recta y el abdomen activo. Apoya las manos
+          sobre los muslos (por encima de las rodillas) para bloquear el
+          movimiento.
+        </p>
+        <p>
+          Intenta levantarte como si hicieras un peso muerto real, pero las
+          manos impiden que el torso suba: se crea una tensión fuerte en la zona
+          lumbar, glúteos y cadena posterior.
+        </p>
+        <p>
+          Mantén <strong>10 segundos</strong>, suelta y repite.
+          <strong>Ejecución:</strong> 15 repeticiones por cada pierna.
+        </p>
+      </section>
+
+      <!-- 13. Hiperextensión dinámica -->
+      <section>
+        <h2>13. Hiperextensión dinámica — al agotamiento</h2>
+        <img
+          src="../img/day23/13.1.jpg"
+          alt="Hiperextensión dinámica en el suelo"
+        />
+        <p>
+          Acuéstate boca abajo. Manos detrás de la cabeza sin tirar del cuello.
+          Eleva el torso de forma dinámica y continua, subiendo y bajando con
+          control, sin quedarte colgado arriba. Evita “romper” la zona lumbar.
+        </p>
+        <p>
+          Variación (opcional): solo torso (más suave) o torso + piernas (más
+          intenso).
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie al agotamiento.</p>
+      </section>
+
+      <!-- 14. Saltos estrella -->
+      <section>
+        <h2>14. Saltos estrella — al agotamiento</h2>
+        <img src="../img/day23/14.1.jpg" alt="Salto estrella en el aire" />
+        <p>
+          De pie, pies juntos y brazos abajo. Salta abriendo las piernas hacia
+          los lados y elevando los brazos por encima de la cabeza. Vuelve con
+          otro salto a la posición inicial (pies juntos, brazos abajo).
+        </p>
+        <p>
+          Aterriza suave, con las rodillas ligeramente flexionadas, torso
+          estable y sin dejar que las rodillas se metan hacia dentro.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie al agotamiento.</p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
